--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.idea/compiler.xml
+/.idea/gradle.xml
+/.idea/misc.xml
+/app/build.gradle
+build.gradle
+/gradle/wrapper/gradle-wrapper.properties
